[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nuances"
version = "0.0.1"
authors = [
  { name="bglbrt" },
]
description = "..."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/bglbrt/NUANCES"
"Bug Tracker" = "https://github.com/bglbrt/NUANCES/issues"